--- a/files/rsyslog.conf
+++ b/files/rsyslog.conf
@@ -88,10 +88,7 @@ news.notice			-/var/log/news/news.notice
 *.=debug;\
 	auth,authpriv.none;\
 	news.none;mail.none	-/var/log/debug
-*.=info;*.=notice;*.=warn;\
-	auth,authpriv.none;\
-	cron,daemon.none;\
-	mail,news.none		-/var/log/messages
+*	/var/log/messages
 
 #
 # Emergencies are sent to everybody logged in.
